--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
       # - command
   pre_build:
     commands:
-      - python -m http.server 8000
+      - python3 -m http.server 8000
       # - command
       # - command
 #  build:
