--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,16 +29,16 @@ phases:
     #commands:
       # - command
       # - command
-  pre_build:
-    commands:
-      - python3 -m http.server 8000
+#  pre_build:
+#    commands:
+#      - python3 -m http.server 8000
       # - command
       # - command
 #  build:
 #    commands:
 #      # - command
 #      # - command
-#      - zip test-codepipeline.zip index.html
+      - zip test-codepipeline.zip *
   #post_build:
     #commands:
       # - command
@@ -53,7 +53,7 @@ phases:
     #file-format: JunitXml | CucumberJson
 #artifacts:
 #  files:
-#  - ./test-codepipeline.zip
+  - ./test-codepipeline.zip
     # - location
     # - location
   #name: $(date +%Y-%m-%d)
