--- a/buildspec.yml
+++ b/buildspec.yml
@@ -51,8 +51,8 @@ phases:
     #base-directory: location
     #discard-paths: yes
     #file-format: JunitXml | CucumberJson
-#artifacts:
-#  files:
+artifacts:
+  files:
   - ./test-codepipeline.zip
     # - location
     # - location
