--- a/appspec.yml
+++ b/appspec.yml
@@ -79,31 +79,31 @@ hooks:
 # During the ApplicationStop deployment lifecycle event, run the commands
 #   in the script specified in "location" starting from the root of the
 #   revision's file bundle.
-#  ApplicationStop:
-#    - location:
-#      timeout:
-#      runas:
-#    - location:
-#      timeout:
-#      runas:
+  ApplicationStop:
+    - location:
+      timeout:
+      runas:
+    - location:
+      timeout:
+      runas:
 # During the BeforeInstall deployment lifecycle event, run the commands
 #   in the script specified in "location".
-#  BeforeInstall:
-#    - location:
-#      timeout:
-#      runas:
-#    - location:
-#      timeout:
-#      runas:
+  BeforeInstall:
+    - location:
+      timeout:
+      runas:
+    - location:
+      timeout:
+      runas:
 # During the AfterInstall deployment lifecycle event, run the commands
 #   in the script specified in "location".
-#  AfterInstall:
-#    - location:
-#      timeout:
-#      runas:
-#    - location:
-#      timeout:
-#      runas:
+  AfterInstall:
+    - location:
+      timeout:
+      runas:
+    - location:
+      timeout:
+      runas:
 # During the ApplicationStart deployment lifecycle event, run the commands
 #   in the script specified in "location".
   ApplicationStart:
@@ -115,10 +115,10 @@ hooks:
 #      runas:
 # During the ValidateService deployment lifecycle event, run the commands
 #   in the script specified in "location".
-#  ValidateService:
-#    - location:
-#      timeout:
-#      runas:
-#    - location:
-#      timeout:
-#      runas:
+  ValidateService:
+    - location:
+      timeout:
+      runas:
+    - location:
+      timeout:
+      runas:
