--- a/appspec.yml
+++ b/appspec.yml
@@ -80,28 +80,19 @@ hooks:
 #   in the script specified in "location" starting from the root of the
 #   revision's file bundle.
   ApplicationStop:
-    - location:
-      timeout:
-      runas:
-    - location:
+    - location: echo "ApplicationStop"
       timeout:
       runas:
 # During the BeforeInstall deployment lifecycle event, run the commands
 #   in the script specified in "location".
   BeforeInstall:
-    - location:
-      timeout:
-      runas:
-    - location:
+    - location: echo "BeforeInstall"
       timeout:
       runas:
 # During the AfterInstall deployment lifecycle event, run the commands
 #   in the script specified in "location".
   AfterInstall:
-    - location:
-      timeout:
-      runas:
-    - location:
+    - location: echo "AfterInstall"
       timeout:
       runas:
 # During the ApplicationStart deployment lifecycle event, run the commands
@@ -116,9 +107,6 @@ hooks:
 # During the ValidateService deployment lifecycle event, run the commands
 #   in the script specified in "location".
   ValidateService:
-    - location:
-      timeout:
-      runas:
-    - location:
+    - location: echo "ValidateService"
       timeout:
       runas:
