--- a/appspec.yml
+++ b/appspec.yml
@@ -96,7 +96,7 @@ hooks:
 # During the ApplicationStart deployment lifecycle event, run the commands
 #   in the script specified in "location".
   ApplicationStart:
-    - location: /run.sh
+    - location: run.sh
       runas: root
 #    - location:
 #      timeout:
