--- a/appspec.yml
+++ b/appspec.yml
@@ -78,7 +78,7 @@ hooks:
 #   in the script specified in "location" starting from the root of the
 #   revision's file bundle.
   ApplicationStop:
-    - location: codedeploy_scripts/stop_app.sh
+    - location: stop_app.sh
       runas: ubuntu
 # During the BeforeInstall deployment lifecycle event, run the commands
 #   in the script specified in "location".
