--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,7 +38,7 @@ phases:
     commands:
 #      # - command
 #      # - command
-      - zip test-codepipeline.zip *
+      - touch CodeBuild
   #post_build:
     #commands:
       # - command
@@ -51,9 +51,9 @@ phases:
     #base-directory: location
     #discard-paths: yes
     #file-format: JunitXml | CucumberJson
-artifacts:
-  files:
-  - ./test-codepipeline.zip
+#artifacts:
+#  files:
+#  - ./test-codepipeline.zip
     # - location
     # - location
   #name: $(date +%Y-%m-%d)
