--- a/buildspec.yml
+++ b/buildspec.yml
@@ -51,12 +51,12 @@ phases:
     #base-directory: location
     #discard-paths: yes
     #file-format: JunitXml | CucumberJson
-#artifacts:
+artifacts:
 #  files:
 #  - ./test-codepipeline.zip
     # - location
     # - location
-  #name: $(date +%Y-%m-%d)
+  name: BuildArtifact
   #discard-paths: yes
   #base-directory: location
 #cache:
