--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,7 +38,7 @@ phases:
     commands:
 #      # - command
 #      # - command
-      - zip test-codepipeline.zip *
+      - touch CodeBuild
   #post_build:
     #commands:
       # - command
@@ -53,7 +53,7 @@ phases:
     #file-format: JunitXml | CucumberJson
 artifacts:
   files:
-  - ./test-codepipeline.zip
+  - '**/*'
     # - location
     # - location
   name: BuildArtifact
